<resources>
    <string name="app_name">Work Fast</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="add_marker">Добавить маркер</string>
    <string name="title_activity_set_marker">Добавить маркер</string>
    <string name="profile">Профиль</string>
    <string name="map">Карты</string>
    <string name="notif">Уведомления</string>
    <string name="change">Сменить режим</string>
    <string name="communicate">Communicate</string>
    <string name="help">Помощь</string>
    <string name="about">О нас</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="call">call</string>
    <string name="sms">sms</string>
    <string name="back">Назад</string>
    <string name="enter_your_text">Введите свой текст</string>
    <string name="add_on_my_position">Добавить на мое местоположение</string>
    <string name="add_by_address">Добавить по адресу</string>
    <string name="add_by_click">Добавить по клику</string>
    <string name="delete">Удалить</string>
    <string name="title_activity_login">Войти</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user__profile">Профиль пользователя</string>
    <string name="show_profile">Показать профиль работодателя</string>
    <string name="registration">Регистрация</string>
    <string name="sign_in">Войти</string>
    <string name="password">Пароль</string>
    <string name="enter_email">Введите Email</string>
    <string name="enter_password_again">Введите пароль еще раз</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_surname">Введите фамилию</string>
    <string name="enter_second_name">Введите отчество</string>
    <string name="enter_phone">Введите мобильный телефон</string>
    <string name="enter_password">Введите пароль</string>
    <string name="close">Выйти</string>
    <string name="input_comment">Введите комментарий</string>
    <string name="send">Отправить</string>
    <string name="phone_login">Номер телефона</string>
    <string name="forgot_password">Забыли пароль</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

</resources>
