<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_crop"
            android:title="@string/profile" />
        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/map" />
        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/close" />
        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_rotate"
            android:title="@string/change" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about" />
        </menu>
    </item>

</menu>