<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="youtube.demo.serverdiplom.Activities.RegistrationActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
   android:id="@+id/pswd"

        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/enter_password"
        android:layout_width="match_parent"

        android:layout_height="48dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
   android:id="@+id/pswd2"
        android:layout_below="@id/pswd"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/enter_password2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_password_again"
        android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_below="@id/pswd2"
        android:layout_height="48dp"
        android:hint="@string/enter_name" />
    <EditText
        android:id="@+id/enter_surname"
        android:layout_width="match_parent"
        android:layout_below="@id/enter_name"
        android:layout_height="48dp"
        android:hint="@string/enter_surname" />
    <EditText
        android:id="@+id/enter_secondname"
        android:layout_width="match_parent"
        android:layout_below="@id/enter_surname"
        android:layout_height="48dp"
        android:hint="@string/enter_second_name" />
    <EditText
        android:id="@+id/enter_phonenubmer"
        android:layout_width="match_parent"
        android:layout_below="@id/enter_secondname"
        android:layout_height="48dp"
        android:inputType="number"
        android:hint="@string/enter_phone" />
    <LinearLayout
        android:id="@+id/layout"
        android:layout_below="@+id/enter_phonenubmer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/accept"
            android:enabled="false"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:text="Подтвердить"/>
        <EditText
            android:id="@+id/pin"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="PIN code"
            android:inputType="numberPassword" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/registration"
        android:layout_below="@id/layout"/>
</RelativeLayout>
