<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="youtube.demo.serverdiplom.Activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_login"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:background="@drawable/buttonstyle"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:shadowColor="#0D0C29"
                android:shadowDx="1"
                android:shadowDy="0"
                android:shadowRadius="2"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:text="@string/sign_in"
                />
            <Button
                android:id="@+id/register_button"

                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle"
                android:shadowColor="#0D0C29"
                android:shadowDx="1"
                android:shadowDy="0"
                android:shadowRadius="2"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:text="@string/registration"
               />

            <Button
                android:id="@+id/forgot_password"

                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle"
                android:shadowColor="#0D0C29"
                android:shadowDx="1"
                android:shadowDy="0"
                android:shadowRadius="2"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_password"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
